--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "bootstrap": "^5.2.3",
+    "build": "^0.1.4",
+    "formik": "^2.2.9",
     "next": "13.4.2",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.4",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "run": "^1.4.0",
+    "yup": "^1.1.1"
   }
 }
